Fixed portfolio img spacing

--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,11 @@ Portfolio Section
 **************************************************/
 .portfolio-head{
     position: relative;
-    padding-bottom: 100px;
+    padding-bottom: 10px;
+}
+
+.portfolio-head .container{
+    position: relative;
     z-index: 100;
 }
 
@@ -283,11 +287,15 @@ Portfolio Section
 .portfolio-image{
     max-height: 400px;
     max-width: 400px;
-    background-color: var(--primary-color);
+    border-radius: 20%;
+    justify-self: center;
+    z-index: 100;
+}
+
+.portfolio-image img{
     border-radius: 20%;
     box-shadow: 5px 10px 30px rgba(0,0,0,0.3);
     justify-self: center;
-    z-index: 100;
 }
 
 .portfolio .grid{
